# qPrimer

./: LICENSE  README.md  pyproject.toml  setup.py
qPrimer/: __init__.py  annotate.py  check.py  design.py  index.html  qPrimer.py  visualize.py
qPrimer/tests/: __init__.py  genes.gtf  qPrimer.html  qPrimer.json  report.html  test.fa  test.ini  test_check.py  test_design.py  test_snps.bed
